src/main/java/com/example/books/error/Error.java
package com.example.books.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class Error {

    String message;

}
